objects/Contact.object
<CustomObject>
    <fields>
        <fullName>dr_talk_to_us_comments__c</fullName>
        <description>For comments entered on Talk to Sales form</description>
        <label>Talk to Us Comments</label>
        <length>1100</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dr_tracking_content__c</fullName>
        <description>For Marketing ROI Tracking</description>
        <label>Tracking - Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dr_tracking_inbound_url__c</fullName>
        <description>For Marketing ROI Tracking</description>
        <label>Tracking - Inbound URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dr_tracking_referring_url__c</fullName>
        <description>For Marketing ROI Tracking</description>
        <label>Tracking - Referring URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dr_tracking_utm_campaign__c</fullName>
        <description>For Marketing ROI Tracking</description>
        <label>Tracking - UTM Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dr_tracking_utm_content__c</fullName>
        <description>For Marketing ROI Tracking</description>
        <label>Tracking - UTM Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dr_tracking_utm_medium__c</fullName>
        <description>For Marketing ROI Tracking</description>
        <label>Tracking - UTM Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dr_tracking_utm_source__c</fullName>
        <description>For Marketing ROI Tracking</description>
        <label>Tracking - UTM Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dr_tracking_utm_term__c</fullName>
        <description>For Marketing ROI Tracking</description>
        <label>Tracking - UTM Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dr_website_domain__c</fullName>
        <description>For data management</description>
        <label>Website Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>engagio__Department__c</fullName>
        <description>Department</description>
        <label>Department</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>engagio__EngagementMinutesLast3Months__c</fullName>
        <description>Engagement minutes in the last 3 months</description>
        <label>Engagement Minutes (3 mo.)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>engagio__EngagementMinutesLast7Days__c</fullName>
        <description>Engagement minutes in the last 7 days</description>
        <label>Engagement Minutes (7 days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>engagio__FirstEngagementDate__c</fullName>
        <description>First engagement date</description>
        <label>First Engagement Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>engagio__Role__c</fullName>
        <description>Role</description>
        <label>Role</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iSell__Avention_ID__c</fullName>
        <description>Unique contact identifier (not currently implemented).</description>
        <label>D&amp;B Contact ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>int_advancements_in_test_automation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fields for the Subscription center</description>
        <label>Advancements in Test Automation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>int_advancements_in_test_automation_date__c</fullName>
        <description>Fields for the Subscription center</description>
        <label>Advancements in Test Automation_date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>int_bi_data_warehouse__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fields for the Subscription center</description>
        <label>BI/Data Warehouse Testing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>int_bi_data_warehouse_date__c</fullName>
        <description>Fields for the Subscription center</description>
        <label>BI/Data Warehouse Testing_date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>int_cont_testing_for_agiledevops_date__c</fullName>
        <description>Fields for the Subscription center</description>
        <label>Continuous Testing for Agile/DevOps_date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>int_continuous_testing_for_agiledevops__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fields for the Subscription center</description>
        <label>Continuous Testing for Agile/DevOps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>int_exploratory_testing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fields for the Subscription center</description>
        <label>Exploratory Testing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>int_exploratory_testing_date__c</fullName>
        <description>Fields for the Subscription center</description>
        <label>Exploratory Testing_date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>int_load_performance_testing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fields for the Subscription center</description>
        <label>Load/Performance Testing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>int_load_performance_testing_date__c</fullName>
        <description>Fields for the Subscription center</description>
        <label>Load/Performance Testing_date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>int_sap_packaged_apps__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fields for the Subscription center</description>
        <label>SAP/Packaged Apps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>int_sap_packaged_apps_date__c</fullName>
        <description>Fields for the Subscription center</description>
        <label>SAP/Packaged Apps_date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>iseeit__Champion__c</fullName>
        <label>Champion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Coach</fullName>
                </value>
                <value>
                    <fullName>Enemy</fullName>
                </value>
                <value>
                    <fullName>Champion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>iseeit__DecisionMaker__c</fullName>
        <label>DecisionMaker</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business User</fullName>
                </value>
                <value>
                    <fullName>Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Economic Buyer</fullName>
                </value>
                <value>
                    <fullName>Economic Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Evaluator</fullName>
                </value>
                <value>
                    <fullName>Executive Sponsor</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Technical Buyer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>job_role__c</fullName>
        <description>For lead capture forms</description>
        <inlineHelpText>A picklist of values for a general categorization of job roles. Used for targeted Marketing campaigns.</inlineHelpText>
        <label>Job Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Architect</fullName>
                </value>
                <value>
                    <fullName>QA Staff</fullName>
                </value>
                <value>
                    <fullName>QA Manager / Team Lead</fullName>
                </value>
                <value>
                    <fullName>QA Director</fullName>
                </value>
                <value>
                    <fullName>QA VP</fullName>
                </value>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Developer Manager / Team Lead</fullName>
                </value>
                <value>
                    <fullName>Development Director</fullName>
                </value>
                <value>
                    <fullName>Development VP</fullName>
                </value>
                <value>
                    <fullName>IT / System Administrator</fullName>
                </value>
                <value>
                    <fullName>Project Manager</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>mkto2__Acquisition_Date__c</fullName>
        <label>Acquisition Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto2__Acquisition_Program_Id__c</fullName>
        <label>Acquisition Program Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto2__Acquisition_Program__c</fullName>
        <label>Acquisition Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_City__c</fullName>
        <label>Inferred City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Company__c</fullName>
        <label>Inferred Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Country__c</fullName>
        <label>Inferred Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Metropolitan_Area__c</fullName>
        <label>Inferred Metropolitan Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Phone_Area_Code__c</fullName>
        <label>Inferred Phone Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Postal_Code__c</fullName>
        <label>Inferred Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_State_Region__c</fullName>
        <label>Inferred State Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Lead_Score__c</fullName>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Referrer__c</fullName>
        <label>Original Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Search_Engine__c</fullName>
        <label>Original Search Engine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Search_Phrase__c</fullName>
        <label>Original Search Phrase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Source_Info__c</fullName>
        <defaultValue>&quot;Contact&quot;</defaultValue>
        <label>Original Source Info</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Source_Type__c</fullName>
        <defaultValue>&quot;salesforce.com&quot;</defaultValue>
        <label>Original Source Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__HideDate__c</fullName>
        <label>Hide Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Date__c</fullName>
        <label>Last Interesting Moment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Desc__c</fullName>
        <label>Last Interesting Moment Desc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Source__c</fullName>
        <label>Last Interesting Moment Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Type__c</fullName>
        <label>Last Interesting Moment Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment__c</fullName>
        <formula>IF(!ISNULL(mkto_si__Last_Interesting_Moment_Date__c), 
HYPERLINK(&quot;/apex/mkto_si__Contact_Full_List?view=IM&amp;id=&quot; &amp; Id, mkto_si__Last_Interesting_Moment_Type__c &amp; &quot; -- &quot; &amp; mkto_si__Last_Interesting_Moment_Desc__c ), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Interesting Moment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Priority__c</fullName>
        <label>Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Relative_Score_Value__c</fullName>
        <label>Relative Score Value</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Relative_Score__c</fullName>
        <formula>CASE( MIN(MAX(mkto_si__Relative_Score_Value__c, 0), 3),
    0, IMAGE(&quot;https://app.marketo.com/images/icons/star0.png&quot;,&quot;0&quot;),
    1, IMAGE(&quot;https://app.marketo.com/images/icons/star1.png&quot;,&quot;1&quot;),
    2, IMAGE(&quot;https://app.marketo.com/images/icons/star2.png&quot;,&quot;2&quot;),
    3, IMAGE(&quot;https://app.marketo.com/images/icons/star3.png&quot;,&quot;3&quot;),
    &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relative Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Sales_Insight__c</fullName>
        <formula>HYPERLINK (&quot;/apex/Contact_Full_List?id=&quot; &amp; Id, IMAGE(&quot;https://www.marketo.com/salesforce/images/applicationLink.png&quot;,&quot;Sales Insight&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Insight</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Urgency_Value__c</fullName>
        <label>Urgency Value</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Urgency__c</fullName>
        <formula>CASE( MIN(MAX(mkto_si__Urgency_Value__c, 0),3),
    0, IMAGE(&quot;https://app.marketo.com/images/icons/fire0.png&quot;,&quot;0&quot;),
    1, IMAGE(&quot;https://app.marketo.com/images/icons/fire1.png&quot;,&quot;1&quot;),
    2, IMAGE(&quot;https://app.marketo.com/images/icons/fire2.png&quot;,&quot;2&quot;),
    3, IMAGE(&quot;https://app.marketo.com/images/icons/fire3.png&quot;,&quot;3&quot;),
    &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Urgency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__View_in_Marketo__c</fullName>
        <formula>HYPERLINK (&quot;/apex/mkto_si__Marketo_Lead_Detail?objType=Contact&amp;objId=&quot; &amp; Id, IMAGE(&quot;https://app.marketo.com/images/icons16/marketo16.png&quot;,&quot;View in Marketo&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View in Marketo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>person_demographic_score__c</fullName>
        <description>For Lead Scoring</description>
        <label>Person Demographic Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sc_Allow_Marekting_Material__c</fullName>
        <defaultValue>false</defaultValue>
        <description>New registrant has to actively check this field for consent - will get Email Opt-In that way</description>
        <label>Allow Marekting Material</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sc_Privacy_Policy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>New registrant has to actively check this field for consent</description>
        <label>Privacy Policy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sc_blog__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fields for the Subscription center</description>
        <label>Blog</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sc_blog_date__c</fullName>
        <description>Fields for the Subscription center</description>
        <label>Blog_date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sc_events__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fields for the Subscription center</description>
        <label>Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sc_events_date__c</fullName>
        <description>Fields for the Subscription center</description>
        <label>Events_date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sc_new_research_webinars__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fields for the Subscription center</description>
        <label>New Research &amp; Webinars</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sc_new_research_webinars_date__c</fullName>
        <description>Fields for the Subscription center</description>
        <label>New Research &amp; Webinars_date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sc_special_announcements__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fields for the Subscription center</description>
        <label>Special Announcements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sc_special_announcements_date__c</fullName>
        <description>Fields for the Subscription center</description>
        <label>Special Announcements_date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sc_support_updates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fields for the Subscription center</description>
        <label>Support updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sc_support_updates_date__c</fullName>
        <description>Fields for the Subscription center</description>
        <label>Support updates_date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sc_technical_product_updates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fields for the Subscription center</description>
        <label>Technical product updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sc_technical_product_updates_date__c</fullName>
        <description>Fields for the Subscription center</description>
        <label>Technical product updates_date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sc_training_updates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fields for the Subscription center</description>
        <label>Training updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sc_training_updates_date__c</fullName>
        <description>Fields for the Subscription center</description>
        <label>Training updates_date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>support_user__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks the contact as a contact from our support system. These contacts use Tosca actively and this field will be used for send outs targeted for our installed base.</description>
        <inlineHelpText>Marks the contact as a contact from our support system. These contacts use Tosca actively and this field will be used for send outs targeted for our installed base.</inlineHelpText>
        <label>Support User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>total_demographic_score__c</fullName>
        <description>For Lead Scoring</description>
        <label>Total Demographic Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>total_score__c</fullName>
        <description>For Lead Scoring</description>
        <label>Total Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>contact_status__c</columns>
        <columns>dr_funnel__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>behavior_score__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>My_Contact_View_EMEA</fullName>
        <columns>contact_status__c</columns>
        <columns>dr_funnel__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>FULL_NAME</columns>
        <columns>Geo__c</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>behavior_score__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Contact View EMEA</label>
        <sharedTo>
            <roleAndSubordinates>DSR_EMEA_Head</roleAndSubordinates>
            <roleAndSubordinates>DSR_EMEA_Team</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Contacts_to_follow_up</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>contact_status__c</columns>
        <columns>dr_follow_up_date__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>contact_status__c</field>
            <operation>equals</operation>
            <value>Open,Re-open,Initiated,Contacted,Not Now</value>
        </filters>
        <label>My Contacts to follow up</label>
        <sharedTo>
            <role>CSO</role>
            <role>DSR_AMS_Head</role>
            <role>DSR_AMS_Team</role>
            <role>DSR_APAC_Head</role>
            <role>DSR_APAC_Team</role>
            <role>DSR_EMEA_Head</role>
            <role>DSR_EMEA_Team</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X1a_Open_ReOpen</fullName>
        <columns>dr_last_campaign_tracking__c</columns>
        <columns>dr_last_campaign_date__c</columns>
        <columns>contact_status__c</columns>
        <columns>dr_mql__c</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.ADDRESS2_COUNTRY</columns>
        <columns>dr_mtl__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>contact_status__c</field>
            <operation>equals</operation>
            <value>Open,Re-open</value>
        </filters>
        <label>1a. Open &amp; ReOpen</label>
    </listViews>
    <listViews>
        <fullName>X6_My_Qualified_SQL_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>contact_status__c</field>
            <operation>equals</operation>
            <value>Qualified - (SQL)</value>
        </filters>
        <label>6. My &quot;Qualified -SQL&quot; Contacts</label>
    </listViews>
    <listViews>
        <fullName>dr_demo_request</fullName>
        <columns>contact_status__c</columns>
        <columns>dr_funnel__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>behavior_score__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>dr_demo_request__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>contact_status__c</field>
            <operation>notEqual</operation>
            <value>Rejected,Not Now,Disqualified</value>
        </filters>
        <label>4. Demo Request</label>
    </listViews>
    <listViews>
        <fullName>dr_mql</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>contact_status__c</columns>
        <columns>CONTACT.TITLE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>dr_funnel__c</field>
            <operation>equals</operation>
            <value>MQL</value>
        </filters>
        <filters>
            <field>contact_status__c</field>
            <operation>notEqual</operation>
            <value>Rejected/Disqualified</value>
        </filters>
        <label>My MQL (Contacts)</label>
    </listViews>
    <listViews>
        <fullName>dr_mtl</fullName>
        <columns>contact_status__c</columns>
        <columns>dr_funnel__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>behavior_score__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>dr_funnel__c</field>
            <operation>equals</operation>
            <value>MTL</value>
        </filters>
        <filters>
            <field>contact_status__c</field>
            <operation>notEqual</operation>
            <value>Rejected,Not Now,Disqualified</value>
        </filters>
        <label>2. MTL</label>
    </listViews>
    <listViews>
        <fullName>dr_not_now</fullName>
        <columns>contact_status__c</columns>
        <columns>dr_funnel__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>behavior_score__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>contact_status__c</field>
            <operation>equals</operation>
            <value>Not Now</value>
        </filters>
        <label>5. Not Now</label>
    </listViews>
    <listViews>
        <fullName>dr_talk_to_sales</fullName>
        <columns>contact_status__c</columns>
        <columns>dr_funnel__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>behavior_score__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>dr_talk_to_sales_now__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>contact_status__c</field>
            <operation>notEqual</operation>
            <value>Rejected,Not Now,Disqualified</value>
        </filters>
        <label>3. Talks to Sales</label>
    </listViews>
    <recordTypes>
        <fullName>Tosca</fullName>
        <active>true</active>
        <label>Tosca</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Mailing_Address_Required_Rule</fullName>
        <active>true</active>
        <description>This validation rule is required to make the mailing address a required field. For now, it just requires country to be the mandatory field. we can expand it for the full mailing address as well if necessary.</description>
        <errorConditionFormula>AND(
MailingCountry = NULL,
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,$Profile.Name &lt;&gt; &quot;Tricentis Sales Operations&quot;)</errorConditionFormula>
        <errorDisplayField>MailingCountry</errorDisplayField>
        <errorMessage>Billing Country is required. If available, please enter the complete billing address.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RejectedDisqualified_and_Notnow_Reasons</fullName>
        <active>true</active>
        <description>Reason for Rejected/Disqualified and Not now status is mandatory</description>
        <errorConditionFormula>AND(
 $Setup.SynchSettings__c.IntegrationUser__c &lt;&gt;  $User.Id,
OR(
	AND (
   ISPICKVAL (	contact_status__c,&quot;Rejected/Disqualified&quot;), 
   ISBLANK( TEXT(dr_disqualified_reason__c))
		),
		AND (
   ISPICKVAL (	contact_status__c,&quot;Not Now&quot;), 
   ISBLANK( TEXT(dr_not_now_reasons__c))
		)
	)
)</errorConditionFormula>
        <errorMessage>Reason for Rejected/Disqualified and Not now status is mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>follow_up_date_required</fullName>
        <active>false</active>
        <errorConditionFormula>AND( 
ISBLANK(dr_follow_up_date__c), 
OR( 
ISPICKVAL(dr_not_now_reasons__c, &quot;Tried to Contact - Will follow up later&quot;), 
ISPICKVAL(dr_not_now_reasons__c, &quot;Budget not available now - Will follow up later&quot;)))</errorConditionFormula>
        <errorDisplayField>dr_follow_up_date__c</errorDisplayField>
        <errorMessage>Follow Up Date is required</errorMessage>
    </validationRules>
</CustomObject>